Add embedded and onetoone